@@ -82,7 +82,7 @@ INDEX: {
             [ body        => $ftih    ],
             [ dist        => $fti     ],
             [ version     => $stored  ],
-            [ doc         => $stored  ],
+            [ docpath     => $stored  ],
             [ date        => $stored  ],
             [ user        => $stored  ],
             [ user_name   => $stored  ],
@@ -103,7 +103,7 @@ INDEX: {
             [ key         => $indexed ],
             [ extension   => $fti     ],
             [ abstract    => $ftih    ],
-            [ doc         => $stored  ],
+            [ docpath     => $stored  ],
             [ dist        => $stored  ],
             [ version     => $stored  ],
             [ date        => $stored  ],
@@ -157,7 +157,7 @@ for my $doc (
         abstract  => 'A key/value pair data type',
         date      => '2010-10-18T15:24:21Z',
         dist      => 'pair',
-        doc       => 'doc/pair',
+        docpath   => 'doc/pair',
         extension => 'pair',
         key       => 'pair',
         user      => 'theory',
@@ -190,7 +190,7 @@ for my $doc (
         date      => '2010-10-18T15:24:21Z',
         dist      => 'pair',
         key       => 'pair/doc/pair',
-        doc       => 'doc/pair',
+        docpath   => 'doc/pair',
         title     => 'pair 0.1.0',
         user      => 'theory',
         user_name => 'David E. Wheeler',
@@ -216,7 +216,7 @@ for my $doc (
         abstract  => 'A semantic version data type',
         date      => '2011-03-21T23:49:28Z',
         dist      => 'semver',
-        doc       => 'docs/semver',
+        docpath   => 'docs/semver',
         extension => 'semver',
         key       => 'semver',
         user      => 'roger',
@@ -228,7 +228,7 @@ for my $doc (
         abstract  => 'A less than semantic version data type (scary)',
         date      => '2011-03-21T23:49:28Z',
         dist      => 'semver',
-        doc       => 'docs/perver',
+        docpath   => 'docs/perver',
         extension => 'perver',
         key       => 'perver',
         user      => 'roger',
@@ -366,7 +366,7 @@ is_deeply $res, {
             date      => "2010-10-18T15:24:21Z",
             dist      => "pair",
             excerpt   => "The ordered pair data type is <strong>nifty</strong>, I tell ya!",
-            doc       => "doc/pair",
+            docpath   => "doc/pair",
             score     => "0.015",
             title     => "pair 0.1.0",
             user      => "theory",
@@ -389,7 +389,7 @@ is_deeply $res, {
             date      => "2010-10-18T15:24:21Z",
             dist      => "pair",
             excerpt   => "The ordered pair data type is <strong>nifty</strong>, I tell ya!",
-            doc       => "doc/pair",
+            docpath   => "doc/pair",
             score     => "0.015",
             title     => "pair 0.1.0",
             user      => "theory",
@@ -411,7 +411,7 @@ is_deeply $res, {
             abstract  => "A semantic version data type",
             date      => "2011-03-21T23:49:28Z",
             dist      => "semver",
-            doc       => 'docs/semver',
+            docpath   => 'docs/semver',
             excerpt   => "A <strong>semantic</strong> version data type",
             extension => "semver",
             score     => "0.140",
@@ -423,7 +423,7 @@ is_deeply $res, {
             abstract  => "A less than semantic version data type (scary)",
             date      => "2011-03-21T23:49:28Z",
             dist      => "semver",
-            doc       => 'docs/perver',
+            docpath   => 'docs/perver',
             excerpt   => "A less than <strong>semantic</strong> version data type (scary)",
             extension => "perver",
             score     => "0.100",
