@@ -5,6 +5,8 @@ Revision history for Perl extension PGXN-API-Searcher.
         of the crazy stuff users can submit, and with the addition of user
         lists in the latest version of PGXN::API, we no longer need wildcard
         searches.
+      - Updated for new field names in the extensions and docs indexes. The
+        old names were `doc` and the new are `docpath`.
 
 0.8.0   2011-04-02T20:32:02
       - Switched to Search::Query::Parser for query parsing. There is a lot
